<resources>
    <string name="app_name">CoNnEcTd</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="default_notification_channel_id">CoNnEcTd593957331728</string>
    <string name="please_check_internet">Please check your internet connection.</string>
    <string name="hey_wassup">Hey, wassup?</string>
    <string name="username_phone_number">Username / Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_clicking_submit_you_agree_to_our_terms_and_conditions">By clicking submit you agree to our terms and conditions</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="type_here">Type Here</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign">SIGN UP</string>
    <string name="to_the_world_of_sparkk">To the world of Connectd</string>
    <string name="welcome">Welcome!</string>
    <string name="back">Back</string>
    <string name="verify_mobile_number">VERIFY MOBILE NUMBER</string>
    <string name="otp_has_been_sent_to_your_mobile_number_on_your_phone_please_enter_it_below">OTP has been sent to your mobile number on your phone. Please enter it below.</string>
    <string name="otp_has_been_sent_to_your_email_please_enter_it_below">OTP has been sent to your provided email address. Please enter it below.</string>
    <string name="didn_t_receive_otp">Didn not receive OTP?</string>
    <string name="change_number">Change number</string>
    <string name="resend">Resend</string>
    <string name="resend_in">Resend in </string>
    <string name="forgot_pass">Forgot password</string>
    <string name="did_someone_forget_their_password">Did someone forget their password?</string>
    <string name="that_s_okay">That\'s okay!</string>
    <string name="tvSendMsg">Just enter the Phone number that you have registered with us and we\'ll send you a reset link !</string>
    <string name="or">or</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="please_enter_valid_email">Please enter a valid email.</string>
    <string name="error_invalid_password">Please enter valid password.</string>
    <string name="error_invalid_fullname">Please enter valid name.</string>
    <string name="error_invalid_mobile">Please enter valid a Mobile number.</string>
    <string name="alphabet_only">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="username_only">abcdefghijklmnopqrstuvwxyz._1234567890</string>
    <string name="enter_user_name">Please enter Username.</string>
    <string name="enter_phone_number">Please enter phone number.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="minimum_length_password">Minimum length of password should be 8.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_confirm_password_not_match">Pasword and confirm password does not match.</string>
    <string name="something_went_wrong">Something went wrong please try again.</string>
    <string name="let_s_sparkk">Let\'s CoNnEcTd!</string>
    <string name="the_new_social_lifestyle">The new social lifestyle.</string>
    <string name="king_industry">KING INDUSTRIES PVT. LTD.</string>
    <string name="important_information">Important information</string>
    <string name="information_is_what_we_take_best_experience_is_what_we_give">Information is what we take,<br>best experience is what we give.</br></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="others">Others</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="location">Location</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="next">Next</string>
    <string name="allow_sparkk_to_access_this_device_s_location">Allow <b>CoNnEcTd</b> to access this device\'s location.</string>
    <string name="allow">Allow</string>
    <string name="decline">Decline</string>
    <string name="please_enter_name">Please enter your name.</string>
    <string name="please_select_gender">Please select your gender.</string>
    <string name="please_enter_dob">Please enter Date of birth.</string>
    <string name="skip">Skip</string>
    <string name="display_picture">Display picture</string>
    <string name="your_profile_will_look_much_better_with_a_picture">Your profile will look much better <br>with a picture.</br> </string>
    <string name="upload">Upload</string>
    <string name="camera_permission">Allow <b>CoNnEcTd</b> to access this device\'s camera and album.</string>
    <string name="please_upload_image">Please upload an image.</string>
    <string name="sparkk_house_rules">CoNnEcTd house Rules</string>
    <string name="make_sure_your_photos_age_and_bio_are_true_to_who_you_are">Make sure your photos, age, <br>and bio are true to who you are.</br></string>
    <string name="play_it_cool">Play it cool.</string>
    <string name="respect_others_and_treat_them_as_you_would_like_to_be_treated">Respect others and treat them as you <br>would like to be treated.</br></string>
    <string name="stay_safe">Stay safe.</string>
    <string name="dont_be">Don\'t be too quick to give out personal information.</string>
    <string name="be_proactive">Be proactive</string>
    <string name="always_report_bad_behavior">Always report bad behavior.</string>
    <string name="i_accept">I accept</string>
    <string name="username_length_validation">Username should have minimum four characters.</string>
    <string name="enter_email_address">Please enter your email address.</string>
    <string name="password_type_msg">Password should contain atleast 1 capital letter, 1 small letter, 1 special number and 1 number.</string>
    <string name="change_email">Change Email</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="company_name">KING INDUSTRIES PVT. LTD.</string>
    <string name="please_select_country">Please select your country</string>
    <string name="feed">Feed</string>
    <string name="namaste">Namaste,</string>
    <string name="we_welcome_you_to_social_lifestyle">We welcome you to\nThe Social Lifestyle</string>
    <string name="follow_people_pages">Follow people or pages to see what they post.</string>
    <string name="popular_profile">Popular profile</string>
    <string name="recommended_by_sparkk">Recommended by CoNnEcTd</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="search">Search</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="flicks">Flicks</string>
    <string name="bio">Bio</string>
    <string name="tell_me_about_yourself">Tell people about yourself...</string>
    <string name="professional">Professional</string>
    <string name="public_name">Public</string>
    <string name="play">Play</string>
    <string name="personal">Personal</string>
    <string name="additional_information">Additional Information</string>
    <string name="connect">Connect</string>
    <string name="explore">Explore</string>
    <string name="activities">Activity</string>
    <string name="no_activity">No Activity</string>
    <string name="friend">Friend</string>
    <string name="lets_make_friends">Lets make friends!</string>
    <string name="date">DATE</string>
    <string name="lets_find_something_special">Lets find you someone SPECIAL!</string>
    <string name="lets_connect_pro">Lets connect to someone PRO!</string>
    <string name="counsellor">COUNSELLOR</string>
    <string name="let_us_help_you">Let us help YOU</string>
    <string name="find_people_to_follow">Find people to\nfollow</string>
    <string name="ask_friends_to_join">Ask your friends to join</string>
    <string name="key_to_good_attention">Key to good attention is a good bio!</string>
    <string name="your_bio">Your Bio</string>
    <string name="save">Save</string>
    <string name="interact">Interact</string>
    <string name="hey">Hey!</string>
    <string name="life_meant_for_friends_family">Life is meant for good friends and family!</string>
    <string name="chat_personal_note">We are sure you have many Looking forward to having them...😃</string>
    <string name="no_chats">No Chats</string>
    <string name="hello_sir_madam">Hello Sir/Madam,</string>
    <string name="your_network_net_worth">Your network is your net worth!</string>
    <string name="chat_professional_note">We hope you continue growing Cheers to you growth...🥂</string>
    <string name="greetings">Greetings,</string>
    <string name="your_biggest_pleasure_in_life_is_being_admired">The biggest pleasure in life is being admired by others!</string>
    <string name="chat_public_note">We pray for your admiration Long may you reign...👑</string>
    <string name="hi">Hi,</string>
    <string name="group_circle_say_lot_char">A person\'s group circles say a lot about their character nowadays!</string>
    <string name="chat_group_note">There are no groups, you are member of...</string>
    <string name="send_message">Send Message</string>
    <string name="report">Report</string>
    <string name="change_connection">Change Connection</string>
    <string name="copy_url">Copy URL</string>
    <string name="block_user">Block User</string>
    <string name="public_play">Public/Play</string>
    <string name="post_type">Connection Type</string>
    <string name="lets_create">Let\'s Create!</string>
    <string name="post">Post</string>
    <string name="flick">Flick</string>
    <string name="audio">Audio</string>
    <string name="guide_book">Guide Book</string>
    <string name="what_would_like_say_about_post">What would you like to say about your post?</string>
    <string name="confirm_posting_selected_post_type">Confirm posting with\nthe selected <b>Post Type</b>?</string>
    <string name="cancel">Cancel</string>
    <string name="no_feed">No Feed</string>
    <string name="its_great_to_have_you">It\'s great to have you</string>
    <string name="currently_no_followers">You currently have no followers\nBut, don\'t worry!\nWe know you will soon...😉</string>
    <string name="comments">Comments</string>
    <string name="comment_as">Comment as</string>
    <string name="error_comment">Please enter your comment</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_to">Share to...</string>
    <string name="unfollow">Unfollow</string>
    <string name="mute">Mute</string>
    <string name="reply">Reply</string>
    <string name="show_reply">Show reply</string>
    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d sec ago</string>
    <string name="time_ago_full_minute">%1$d min ago</string>
    <string name="time_ago_full_minutes">%1$d min ago</string>
    <string name="delete">Delete</string>
    <string name="edits">Edit</string>
    <string name="view_group">View Group</string>
    <string name="shared_media">Shared Media</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="block">Block</string>
</resources>