<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llDialogRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:layout_margin="@dimen/_25sdp"
            android:background="@drawable/bg_dark_gray_card"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/report"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
              />
            <TextView
                android:id="@+id/tvCopyLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/copy_link"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
              />
            <TextView
                android:id="@+id/tvShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/share_to"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
              />
            <TextView
                android:id="@+id/tvUnfollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/unfollow"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
              />
            <TextView
                android:id="@+id/tvMute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/mute"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/_14ssp"
              />
            <TextView
                android:visibility="gone"
                android:id="@+id/tvDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/edits"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                />

        </LinearLayout>
    </LinearLayout>
</layout>