<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvViewGroup"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/view_group"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvSharedMedia"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/shared_media"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvMuteNotification"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:paddingEnd="@dimen/_20sdp"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:minWidth="@dimen/_100sdp"
            android:text="@string/mute_notification"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvClearChat"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/clear_chat"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />
 <TextView
            android:id="@+id/tvSearch"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />
 <TextView
            android:id="@+id/tvReport"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/report"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />
 <TextView
            android:id="@+id/tvBlock"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/white"
            android:fontFamily="@font/sourcesansprosegular"
            android:gravity="center_vertical"
            android:text="@string/block"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>
</layout>