<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_card"
        android:orientation="vertical"
        android:elevation="@dimen/_4sdp"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_16sdp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/sourcesansprosegular"
                android:id="@+id/rdMale"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/male"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:id="@+id/rdFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/female"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:id="@+id/rdTransender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/transgender"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:id="@+id/rdOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/others"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14ssp" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>