<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_5sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_white_card"
        android:padding="@dimen/_14sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesansprosegular"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/post_type"
            android:gravity="center"
            android:textColor="@color/black_new"
            android:textSize="@dimen/_16ssp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_rb_connection_type"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/personal"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_16ssp" />

            <RadioButton
                android:id="@+id/rbProfessional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_rb_connection_type"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/professional"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_16ssp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbPublic"
                android:button="@drawable/custom_rb_connection_type"
                android:fontFamily="@font/sourcesansprosegular"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/public_name"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_16ssp" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>

</layout>